--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "ember-cli-keyboard-nav",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Easy dropdown menu keyboard navigation for Ember.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "keyboard",
+    "dropdown",
+    "navigation",
+    "nav",
+    "form"
   ],
   "license": "MIT",
   "author": "",
@@ -11,7 +16,7 @@
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/timjcook/ember-cli-keyboard-nav",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
